--- a/en/index.html
+++ b/en/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="../css/reset.css" media="all">
 	<link rel="stylesheet" href="../css/slick.css" media="all">
 	<link rel="stylesheet" href="../css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="../css/style.css?v5" media="all">
+	<link rel="stylesheet" href="../css/style.css?v6" media="all">
 
 	<!--[if lt IE 9]>
 		<script type="text/javascript" src="js/html5.js"></script>
@@ -57,6 +57,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Ambassadors</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
@@ -168,6 +169,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Ambassadors</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
@@ -250,6 +252,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Ambassadors</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
@@ -353,7 +356,6 @@
 				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">Participate in private sale</a>
 			</div>
 		</div>
-		<!--
 		<div class="top-gradient-bg box-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
@@ -362,6 +364,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Ambassadors</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
@@ -372,62 +375,60 @@
 			<section class="box box-table roadmap go-animate" id="team">
 				<div class="box-cell">
 					<h2 class="box-title ta-r">
-						Team
+						Ambassadors
 					</h2>
-					<h3 class="box-title-ann mtop ta-r">Team</h3>
+					<h3 class="box-title-ann mtop ta-r">Ambassadors</h3>
 					<div class="team-container">
 						<div class="team-slider-wrapper">
 							<div class="team-slider team-list">
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-1.jpg" alt="">
+										<img src="images/team-image-7.jpg" alt="">
 									</div>
-									<div class="team-name">K. Lee</div>
-									<div class="team-type">Co-Founder and CTO</div>
-									<div class="team-description">
-										senior programmer, extensive experience for trading terminals programming, as well as being an expert in blockchain development
-									</div>
+									<a href="https://www.linkedin.com/in/reuben-godfrey/" target="_blank" class="team-icon"><img src="images/linked-icon.png" alt=""></a>
+									<div class="team-name">Reuben Godfrey</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-2.jpg" alt="">
+										<img src="images/team-image-8.jpg" alt="">
 									</div>
-									<div class="team-name">Julia Choi</div>
-									<div class="team-type">Co-founder and CMO</div>
-									<div class="team-description">
-										 7 years of experience in digital marketing, helped 5+ blockchain projects to raise more then $10 millions
-									</div>
-								</div>
-
-								<div class="team-slide">
-									<div class="team-image">
-										<img src="/images/team-image-4.jpg" alt="">
-									</div>
-									<div class="team-name">Kim Sung-min</div>
-									<div class="team-type">Operations Manager</div>
-									<div class="team-description">
-										Leader of the Executive team with many years of experience in technology startups
-									</div>
+									<a href="https://www.linkedin.com/in/adnanah/" target="_blank" class="team-icon"><img src="images/linked-icon.png" alt=""></a>
+									<div class="team-name">Adnan Ahmed Siddiqui</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-6.jpg" alt="">
+										<img src="images/team-image-9.jpg" alt="">
 									</div>
-									<div class="team-name">Bam Ki-moon</div>
-									<div class="team-type">Lead Designer</div>
-									<div class="team-description">
-										UI/UX Visual designer
-									</div>
+									<a href="https://www.linkedin.com/in/kilian-peter-krings-827298121/" target="_blank" class="team-icon"><img src="images/linked-icon.png" alt=""></a>
+									<div class="team-name">Kilian Peter Krings</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-5.jpg" alt="">
+										<img src="images/team-image-10.jpg" alt="">
 									</div>
-									<div class="team-name">Eu Chan</div>
-									<div class="team-type">Community manager</div>
-									<div class="team-description">
-										
+									<a href="https://www.linkedin.com/in/deepanshubhatt/" target="_blank" class="team-icon"><img src="images/linked-icon.png" alt=""></a>
+									<div class="team-name">Deepanshu Bhatt</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-11.jpg" alt="">
 									</div>
+									<a href="https://www.linkedin.com/in/vilniuscapital/" target="_blank" class="team-icon"><img src="images/linked-icon.png" alt=""></a>
+									<div class="team-name">Anthony Johnson</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-12.jpg" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/jonnyfianu/" target="_blank" class="team-icon"><img src="images/linked-icon.png" alt=""></a>
+									<div class="team-name">Jonathan Fianu</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-13.jpg" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/williambryant1/" target="_blank" class="team-icon"><img src="images/linked-icon.png" alt=""></a>
+									<div class="team-name">Will Bryant</div>
 								</div>
 							</div>
 						</div>
@@ -439,7 +440,6 @@
 				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">Participate in private sale</a>
 			</div>
 		</div>
-		-->
 		<div class="colored-bg box-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
@@ -448,6 +448,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Ambassadors</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
@@ -481,6 +482,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Ambassadors</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
@@ -519,6 +521,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Ambassadors</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
