--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="css/reset.css" media="all">
 	<link rel="stylesheet" href="css/slick.css" media="all">
 	<link rel="stylesheet" href="css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="css/style.css?v5" media="all">
+	<link rel="stylesheet" href="css/style.css?v6" media="all">
 
 	<!--[if lt IE 9]>
 		<script type="text/javascript" src="js/html5.js"></script>
@@ -57,6 +57,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
@@ -172,6 +173,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
@@ -237,7 +239,7 @@
 						</div>
 					</div>
 					<a href="#connect-popup" data-fancybox class="protocol-button">
-						<img src="/images/protocol-button-kr.png" alt="">
+						<img src="images/protocol-button-kr.png" alt="">
 					</a>
 				</div>
 			</section>
@@ -254,6 +256,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
@@ -356,7 +359,6 @@
 				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">개인적 판매에 참여하다</a>
 			</div>
 		</div>
-		<!--
 		<div class="top-gradient-bg box-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
@@ -365,6 +367,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
@@ -375,62 +378,60 @@
 			<section class="box box-table roadmap go-animate" id="team">
 				<div class="box-cell">
 					<h2 class="box-title ta-r">
-						팀
+						Ambassadors
 					</h2>
-					<h3 class="box-title-ann mtop ta-r">팀</h3>
+					<h3 class="box-title-ann mtop ta-r">Ambassadors</h3>
 					<div class="team-container">
 						<div class="team-slider-wrapper">
 							<div class="team-slider team-list">
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-1.jpg" alt="">
+										<img src="images/team-image-7.jpg" alt="">
 									</div>
-									<div class="team-name">K. Lee</div>
-									<div class="team-type">Co-Founder and CTO</div>
-									<div class="team-description">
-										senior programmer, extensive experience for trading terminals programming, as well as being an expert in blockchain development
-									</div>
+									<a href="https://www.linkedin.com/in/reuben-godfrey/" target="_blank" class="team-icon"><img src="images/linked-icon.png" alt=""></a>
+									<div class="team-name">Reuben Godfrey</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-2.jpg" alt="">
+										<img src="images/team-image-8.jpg" alt="">
 									</div>
-									<div class="team-name">Julia Choi</div>
-									<div class="team-type">Co-founder and CMO</div>
-									<div class="team-description">
-										 7 years of experience in digital marketing, helped 5+ blockchain projects to raise more then $10 millions
-									</div>
-								</div>
-
-								<div class="team-slide">
-									<div class="team-image">
-										<img src="/images/team-image-4.jpg" alt="">
-									</div>
-									<div class="team-name">Kim Sung-min</div>
-									<div class="team-type">Operations Manager</div>
-									<div class="team-description">
-										Leader of the Executive team with many years of experience in technology startups
-									</div>
+									<a href="https://www.linkedin.com/in/adnanah/" target="_blank" class="team-icon"><img src="images/linked-icon.png" alt=""></a>
+									<div class="team-name">Adnan Ahmed Siddiqui</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-6.jpg" alt="">
+										<img src="images/team-image-9.jpg" alt="">
 									</div>
-									<div class="team-name">Bam Ki-moon</div>
-									<div class="team-type">Lead Designer</div>
-									<div class="team-description">
-										UI/UX Visual designer
-									</div>
+									<a href="https://www.linkedin.com/in/kilian-peter-krings-827298121/" target="_blank" class="team-icon"><img src="images/linked-icon.png" alt=""></a>
+									<div class="team-name">Kilian Peter Krings</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-5.jpg" alt="">
+										<img src="images/team-image-10.jpg" alt="">
 									</div>
-									<div class="team-name">Eu Chan</div>
-									<div class="team-type">Community manager</div>
-									<div class="team-description">
-										
+									<a href="https://www.linkedin.com/in/deepanshubhatt/" target="_blank" class="team-icon"><img src="images/linked-icon.png" alt=""></a>
+									<div class="team-name">Deepanshu Bhatt</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-11.jpg" alt="">
 									</div>
+									<a href="https://www.linkedin.com/in/vilniuscapital/" target="_blank" class="team-icon"><img src="images/linked-icon.png" alt=""></a>
+									<div class="team-name">Anthony Johnson</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-12.jpg" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/jonnyfianu/" target="_blank" class="team-icon"><img src="images/linked-icon.png" alt=""></a>
+									<div class="team-name">Jonathan Fianu</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="images/team-image-13.jpg" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/williambryant1/" target="_blank" class="team-icon"><img src="images/linked-icon.png" alt=""></a>
+									<div class="team-name">Will Bryant</div>
 								</div>
 							</div>
 						</div>
@@ -439,10 +440,9 @@
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">개인적 판매에 참여하다</a>
+				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">Participate in private sale</a>
 			</div>
 		</div>
-		-->
 		<div class="colored-bg box-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
@@ -451,6 +451,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
@@ -484,6 +485,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
@@ -500,11 +502,11 @@
 					</h2>
 					<h3 class="box-title-ann ta-r">파트너</h3>
 					<div class="partners-list">
-						<div class="partners-list-item"><img src="/images/partner-image-5.png"></div>
-						<div class="partners-list-item"><img src="/images/partner-image-6.png"></div>
-						<div class="partners-list-item"><img src="/images/partner-image-7.png"></div>
-						<div class="partners-list-item"><img src="/images/partner-image-8.png"></div>
-						<div class="partners-list-item"><img src="/images/partner-image-9.png"></div>
+						<div class="partners-list-item"><img src="images/partner-image-5.png"></div>
+						<div class="partners-list-item"><img src="images/partner-image-6.png"></div>
+						<div class="partners-list-item"><img src="images/partner-image-7.png"></div>
+						<div class="partners-list-item"><img src="images/partner-image-8.png"></div>
+						<div class="partners-list-item"><img src="images/partner-image-9.png"></div>
 					</div>
 				</div>
 			</section>
@@ -522,6 +524,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
