--- a/index.html
+++ b/index.html
@@ -11,14 +11,9 @@
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 
-	<link rel="stylesheet" href="css/reset.css" media="all">
 	<link rel="stylesheet" href="css/slick.css" media="all">
 	<link rel="stylesheet" href="css/jquery.fancybox.min.css" media="all">
 	<link rel="stylesheet" href="css/style.css?v6" media="all">
-
-	<!--[if lt IE 9]>
-		<script type="text/javascript" src="js/html5.js"></script>
-	<![endif]-->
 </head>
 <body>
 	<div class="page-wrapper">
@@ -443,7 +438,7 @@
 				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">Participate in private sale</a>
 			</div>
 		</div>
-		<div class="colored-bg box-wrapper">
+		<div class="colored-bg box-wrapper news-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
@@ -456,16 +451,139 @@
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
 			</div>
+			<div class="colored-bg-elements">
+				<div class="line"></div>
+				<div class="line"></div>
+				<div class="line"></div>
+				<div class="line"></div>
+				<div class="line"></div>
+			</div>
 			<section class="box box-table news" id="news">
 				<div class="box-cell">
 					<h2 class="box-title ta-r">
-						블로그
+						Blog
 					</h2>
-					<h3 class="box-title-ann ta-r">블로그</h3>
-					<div class="news-list">
-						<div class="news-list-item big">
-							<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
-								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/gjZLQCthU5U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="news-list-wrapper">
+						<div class="news-list">
+							<div class="news-list-box">
+								<div class="news-list-item big">
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
+										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/IjEgbEW_VxI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
+								</div>
+								<div class="news-list-item">
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
+										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/gjZLQCthU5U&t=1s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
+									<div class="blog-content">
+										<div class="blog-title">16.07.2019</div>
+										<div class="blog-text">
+											Business tokenization protocol
+										</div>
+									</div>
+								</div>
+								<div class="news-list-item">
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
+										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/OXQ9ffhJLiA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
+									<div class="blog-content">
+										<div class="blog-title">16.07.2019</div>
+										<div class="blog-text">
+											Business tokenization protocol
+										</div>
+									</div>
+								</div>
+								<div class="news-list-item">
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
+										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/FAi71pqh_EU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
+									<div class="blog-content">
+										<div class="blog-title">16.07.2019</div>
+										<div class="blog-text">
+											Business tokenization protocol
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="news-list-box">
+								<div class="news-list-item big">
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
+										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/wEjNV_Hu_cQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
+								</div>
+								<div class="news-list-item">
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
+										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/1Xd082HFy00" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
+									<div class="blog-content">
+										<div class="blog-title">16.07.2019</div>
+										<div class="blog-text">
+											Business tokenization protocol
+										</div>
+									</div>
+								</div>
+								<div class="news-list-item">
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
+										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/gjZLQCthU5U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
+									<div class="blog-content">
+										<div class="blog-title">16.07.2019</div>
+										<div class="blog-text">
+											Business tokenization protocol
+										</div>
+									</div>
+								</div>
+								<div class="news-list-item">
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
+										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/gjZLQCthU5U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
+									<div class="blog-content">
+										<div class="blog-title">16.07.2019</div>
+										<div class="blog-text">
+											Business tokenization protocol
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="news-list-box">
+								<div class="news-list-item big">
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
+										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/gjZLQCthU5U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
+								</div>
+								<div class="news-list-item">
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
+										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/gjZLQCthU5U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
+									<div class="blog-content">
+										<div class="blog-title">16.07.2019</div>
+										<div class="blog-text">
+											Business tokenization protocol
+										</div>
+									</div>
+								</div>
+								<div class="news-list-item">
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
+										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/gjZLQCthU5U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
+									<div class="blog-content">
+										<div class="blog-title">16.07.2019</div>
+										<div class="blog-text">
+											Business tokenization protocol
+										</div>
+									</div>
+								</div>
+								<div class="news-list-item">
+									<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
+										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/gjZLQCthU5U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
+									<div class="blog-content">
+										<div class="blog-title">16.07.2019</div>
+										<div class="blog-text">
+											Business tokenization protocol
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -473,7 +591,64 @@
 			</section>
 			<div class="bottom-panel last">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
-				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">개인적 판매에 참여하다</a>
+				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">Participate in private sale</a>
+			</div>
+		</div>
+		<div class="colored-bg box-wrapper our-wrapper">
+			<div class="page-scroller-wrapper">
+				<ul class="page-scroller">
+					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
+					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
+					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
+					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
+					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">대사</a></li>
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
+					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
+				</ul>
+			</div>
+			<div class="colored-bg-elements">
+				<div class="simple-line sl-1"></div>
+				<div class="simple-line sl-2"></div>
+				<div class="simple-line sl-3"></div>
+				<div class="simple-line sl-4"></div>
+				<div class="simple-line sl-5"></div>
+			</div>
+			<section class="box box-table our" id="our">
+				<div class="box-cell">
+					<a href="https://medium.com/@product.protocol" target="_blank" class="subbox-title">See our full blog</a>
+					<h2 class="box-title small padding">
+						FROM OUR BLOG
+					</h2>
+					<div class="our-list-wrapper">
+						<div class="our-list">
+							<div class="our-list-item">
+								<a href="https://medium.com/@product.protocol/dear-friends-we-are-pleased-to-announce-our-meetup-may-12-in-hong-kong-a70c18c4a89" class="our-list-item-overlay">
+									<span class="our-list-item-title">Dear friends, we are pleased to announce our meetup may 12 in Hong Kong!</span>
+								</a>
+							</div>
+							<div class="our-list-item">
+								<a href="https://medium.com/@product.protocol/new-video-what-is-the-product-protocol-platform-solution-d8048e5d8745" class="our-list-item-overlay">
+									<span class="our-list-item-title">What is the product protocol platform solution</span>
+								</a>
+							</div>
+							<div class="our-list-item">
+								<a href="https://medium.com/@product.protocol/interview-cmo-pp-76702d387cd1" class="our-list-item-overlay">
+									<span class="our-list-item-title">Interview CMO PP</span>
+								</a>
+							</div>
+							<div class="our-list-item">
+								<a href="https://medium.com/@product.protocol/blockchain-version-of-alibaba-79f330e77695" class="our-list-item-overlay">
+									<span class="our-list-item-title">Blockchain version of «Alibaba»</span>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<div class="bottom-panel last">
+				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">Participate in private sale</a>
 			</div>
 		</div>
 		<!--
